--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.2",
-    "localtunnel": "^2.0.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.77",
+    "@langchain/google-genai": "^0.2.18",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "langchain": "^0.3.34",
+    "ngrok": "5.0.0-beta.2",
+    "zod": "^4.1.11"
   }
 }
