Add Prettier configuration, update environment variables, and refactor GeminiUtils for improved AI response generation

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,44 @@
-GOOGLE_API_KEY=your-api-key
+# Server Configuration
+PORT=5000
+HOST=localhost
+APP_ENV=development
+
+
+# Debug Settings
+DEBUG=true
+LOG_LEVEL=debug
+
+
+
+CORS_ENABLED=true
+RATE_LIMIT_ENABLED=false
+
+
+JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRATION=7d
+
+
+DB_HOST=localhost
+DB_PORT=27017
+DB_NAME=localmind
+DB_USER=root
+DB_PASSWORD=password
+DB_CONNECTION_STRING=mongodb://localhost:27017/localmind
+
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+
+UPLOAD_DIR=./uploads
+TEMP_DIR=./temp
+MAX_FILE_SIZE=5242880
+
+
+ENCRYPTION_KEY=your_encryption_key_here
+ENABLE_RATE_LIMITING=false
+
+
+
+GOOGLE_API_KEY=your_google_api_key_here
