--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-tunnel": "lt --port 5000",
+    "format": "prettier --write .",
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.2",
+    "prettier": "3.6.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
