--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.56",
     "@langchain/core": "^0.3.77",
     "@langchain/google-genai": "^0.2.18",
+    "@langchain/ollama": "^0.2.4",
+    "@types/mongoose": "^5.11.97",
+    "d3-dsv": "2",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "langchain": "^0.3.34",
+    "mongoose": "^8.18.1",
     "ngrok": "5.0.0-beta.2",
     "zod": "^4.1.11"
   }
