--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
   "dependencies": {
     "@langchain/core": "^0.3.77",
     "@langchain/google-genai": "^0.2.18",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.34",
+    "mongoose": "^8.18.2",
+    "morgan": "^1.10.1",
     "ngrok": "5.0.0-beta.2",
     "zod": "^4.1.11"
   }
