--- a/package.json
+++ b/package.json
@@ -33,17 +33,16 @@
     "@langchain/core": "^0.3.77",
     "@langchain/google-genai": "^0.2.18",
     "@langchain/ollama": "^0.2.4",
-    "@types/mongoose": "^5.11.97",
-    "d3-dsv": "2",
-
+    "@types/argon2": "^0.15.4",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.10",
+    "argon2": "^0.44.0",
+    "d3-dsv": "2",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.34",
-    "mongoose": "^8.18.1",
-
     "mongoose": "^8.18.2",
     "morgan": "^1.10.1",
     "ngrok": "5.0.0-beta.2",
