--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "target": "es2022",
     "lib": ["es2022"],
-    "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "./types"],
 
     "sourceMap": true,
     "declaration": true,
@@ -22,6 +22,6 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types/**/*"],
   "exclude": ["node_modules", "dist"]
 }
