feat: add user profile endpoint and middleware integration
- Implemented a new profile method in UserController to fetch user data by email.
- Added findEmail utility function in UserUtils to retrieve user details without exposing sensitive information.
- Enhanced user middleware to handle token extraction from cookies.
- Integrated cookie-parser middleware in app routes for cookie handling.
- Updated user routes to include the new profile endpoint with middleware protection.

--- a/package.json
+++ b/package.json
@@ -35,15 +35,14 @@
     "@langchain/google-genai": "^0.2.18",
     "@langchain/ollama": "^0.2.4",
     "@types/argon2": "^0.15.4",
+    "@types/cookie-parser": "^1.4.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.10",
     "argon2": "^0.44.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/mongoose": "^5.11.97",
-    "@types/morgan": "^1.9.10",
     "chalk": "^5.6.2",
     "cloudflared-tunnel": "^1.0.3",
+    "cookie-parser": "^1.4.7",
     "d3-dsv": "2",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
