--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,8 @@ MAX_FILE_SIZE=5242880
 ENCRYPTION_KEY=your_encryption_key_here
 ENABLE_RATE_LIMITING=false
 
+BACKEND_URL=http://localhost:5000
 
-
+# Model Api keys
+OPENAI_API_KEY=your_openai_api_key_here
 GOOGLE_API_KEY=your_google_api_key_here
