--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,4 @@ BACKEND_URL=http://localhost:5000
 # Model Api keys
 OPENAI_API_KEY=your_openai_api_key_here
 GOOGLE_API_KEY=your_google_api_key_here
+GROQ_API_KEY=your_groq_api_key_here
