--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/argon2": "^0.15.4",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
+    "@types/nodemailer": "^7.0.3",
     "jest": "^30.2.0",
     "prettier": "3.6.2",
     "ts-jest": "^29.4.5",
@@ -58,6 +59,7 @@
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "ngrok": "5.0.0-beta.2",
+    "nodemailer": "^7.0.10",
     "ora": "^9.0.0",
     "zod": "^4.1.12"
   }
